added hover and some style fixed

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div><a href="https://www.olx.pl" id="headerLogo" title="Ogłoszenia - Sprzedam, kupię na OLX.pl">
                <img class="headerLogo" src="./img/OlxLogo.jpg" alt="logo olx"></a></div>
             <ul class="userBox">
-                <li id="navMessage" class="navBox"><a class="navBox" href="https://www.olx.pl/mojolx/wiadomosci/" title="wiadomosci" ><i class="fa-regular fa-comment"></i><span class="messages">Wiadmomości</span></li></a>
+                <li id="navMessage" class="navBox"><a href="https://www.olx.pl/mojolx/wiadomosci/" title="wiadomosci" ><i class="fa-regular fa-comment"></i><span class="messages">Wiadmomości</span></li></a>
                 <li id="navObserved" class="navBox"><a href="https://www.olx.pl/obserwowane/" title="obserwowane"><i class="fa-regular fa-heart"></i></li></a>
                 <li id="navMyAccountLink" class="navBox"><a href="https://www.olx.pl/mojolx/"><i class="fa-regular fa-user"></i><span class="yourAccount">Twoje Konto</span></li></a>
                 
             </ul>
-            <a id="postNewAdLink" class="addNewPost" href="https://www.olx.pl/d/nowe-ogloszenie/?bs=homepage_adding"><span>Dodaj Ogłoszenie</span></a>
+            <a id="postNewAdLink" class="addNewPost" href="https://www.olx.pl/d/nowe-ogloszenie/?bs=homepage_adding"><span class="trySomething">Dodaj Ogłoszenie</span></a>
         </div>
     </div>
    
